# master-experiments

./: .gitignore  CMakeLists.txt  evaluation.cpp  evaluation.h  main.cpp  metrics.h  profilenotloadederror.cpp  profilenotloadederror.h  svm.cpp  svm.h  tweet.cpp  tweet.h  twitteruser.cpp  twitteruser.h  utils.h
data/: bow_timings_10  bow_timings_20  bow_timings_30  bow_timings_40  bow_timings_50  bow_timings_60  bow_timings_70  bow_timings_80  bow_timings_90  timings_10  timings_20  timings_30  timings_40  timings_50  timings_60  timings_70  timings_80  timings_90  topicsTimingsExtractedAt20140508.csv
tests/: .userprofiletests.cpp.kate-swp  CMakeLists.txt  common.h  evaluationtests.cpp  main.cpp  twitterusertests.cpp  userprofiletests.cpp  utilstests.cpp
tests/fixtures/: example_svm_model.txt  expected_result.csv  expected_result_filtered.csv  topic_timings
tests/sql/: relationship.sql  setup.sql  teardown.sql
